--- a/inlineslider2.html
+++ b/inlineslider2.html
@@ -1,78 +1,83 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
-    <style>
-        
-    </style>
+	<style>
+	</style>
 </head>
+
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-<div class="large_view" id="p1" data-images="http://placehold.it/300&text=1picture, http://placehold.it/300&text=2picture,http://placehold.it/300&text=3picture, http://placehold.it/300&text=4picture,  http://placehold.it/300&text=5picture">
-  <img src="http://placehold.it/300&text=first+picture"/>
-	<a href='#' class='next'>next</a>
-	<a href='#' class='previous'>prev</a>
-</div>
-
-
-<div class="large_view" id="p2" data-images="http://placehold.it/300&text=aaa,http://placehold.it/300&text=bbb, http://placehold.it/300&text=ccc, http://placehold.it/300&text=dddd">
-	<a href='#' class='next'>next</a>
-	<a href='#' class='previous'>prev</a>
-</div>
-
-
-
-<script type="text/javascript">
-        var index = 0;
-
-var images = [
-  'http://placehold.it/300&text=first+picture',
-  'http://placehold.it/300&text=second+picture',
-  'http://placehold.it/300&text=third+picture'
-];
-
-var previousIndex = function(id, cvalue) {
-  var arrayOfData = [];
-  var id=$('#'+id).data('images').split(',');
-  arrayOfData.push(id);
-  var length=arrayOfData[0].length;
-  
-  var index = arrayOfData[0].indexOf('http://placehold.it/300&text=5picture');
-	console.log('index-'+index);
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	
-  if (index <= 0) {
-    return length - 1; // cycle backwards to the last image
-  } else {
-    return index - 1;
-  }
-}
+	<div class="large_view" id="p1" data-images="http://placehold.it/300&text=1picture,http://placehold.it/300&text=2picture,http://placehold.it/300&text=3picture,http://placehold.it/300&text=4picture,http://placehold.it/300&text=5picture">
+		<img src="http://placehold.it/300&text=first+picture" />
+		<a href='#' class='next'>next</a>
+		<a href='#' class='previous'>prev</a>
+	</div>
+	
+	
+	<div class="large_view" id="p2" data-images="http://placehold.it/300&text=11picture,http://placehold.it/300&text=12picture,http://placehold.it/300&text=13picture,http://placehold.it/300&text=14picture">
+		<img src="http://placehold.it/300&text=11picture" />
+		<a href='#' class='next'>next</a>
+		<a href='#' class='previous'>prev</a>
+	</div>
+	
+	
+	<script type="text/javascript">
+		var index = 0;
+		
+		var images = [
+		  'http://placehold.it/300&text=first+picture',
+		  'http://placehold.it/300&text=second+picture',
+		  'http://placehold.it/300&text=third+picture'
+		];
+		
+		var previousIndex = function(id, cvalue) {
+		 <!--console.log(id+"--"+cvalue); -->
+		  var arrayOfData = [];
+		  var id=$('#'+id).data('images').split(',');
+		  arrayOfData.push(id);
+		  var length=arrayOfData[0].length;
+		  
+		  var index = arrayOfData[0].indexOf(cvalue);
+		
+		  if (index <= 0) {
+		    return length - 1; 
+		  } else {
+		    return index - 1;
+		  }
+		}
+		
+		var nextIndex = function(id,cvalue) {
+			var arrayOfData = [];
+			var id=$('#'+id).data('images').split(',');
+			arrayOfData.push(id);
+			var length=arrayOfData[0].length;
 
-var nextIndex = function(id,index) {
-	alert(id);
-  return ((index + 1) % length);
-};
-
-$('.next').click(function() {
-  var img=$(this).parent('.large_view').data('images');
-  var id=$(this).parent('.large_view').attr('ID');
-  console.log(id);
-  var stuff =$(this).parent('.large_view').data('images').split(',');
-  index = nextIndex(id,index);
-  $('.large_view img').attr('src', stuff[index]);
-});
-
-$('.previous').click(function() {
-	var id=$(this).parent('.large_view').attr('ID');
-	var stuff =$(this).parent('.large_view').data('images').split(',');
-	var cvalue=$(this).closest('.large_view img').attr('src');
-   index = previousIndex(id,cvalue);
-   console.log(id);
-   $('.large_view img').attr('src', stuff[index]);
-});
-
-/** initialize the image on load to the first one */
-$('.large_view img').attr('src', images[index]);
-</script>
+			var index = arrayOfData[0].indexOf(cvalue);	
+			return ((index + 1) % length);
+		};
+		
+		$('.next').click(function() {
+		  var img=$(this).parent('.large_view').data('images');
+		  var id=$(this).parent('.large_view').attr('ID');
+		  var stuff =$(this).parent('.large_view').data('images').split(',');
+		  var cvalue=$(this).parent('.large_view').find('img').attr('src');
+		  index = nextIndex(id,cvalue);
+		  $('.large_view img').attr('src', stuff[index]);
+		});
+		
+		$('.previous').click(function() {
+			var id=$(this).parent('.large_view').attr('ID');
+			var stuff =$(this).parent('.large_view').data('images').split(',');
+			var cvalue=$(this).parent('.large_view').find('img').attr('src');
+		   index = previousIndex(id,cvalue);
+		   console.log(index+"--"+id);
+		   $('.large_view img').attr('src', stuff[index]);
+		});
+		
+		/** initialize the image on load to the first one */
+		//$('.large_view img').attr('src', images[index]);
+	</script>
 </body>
 </html>
